[package]
name = "bevy-combine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", default-features = true, features = ["dynamic"] }
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
