[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", default-features = false, features = [
    "render",
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11",
] }
bevy_kira_audio = "0.12.0"
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = { version = "0.16.2", features = ["wasm-bindgen"] }
itertools = "0.10.3"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
